--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Check Formatting (Optional)
         run: |
-          poetry --check .
+          poetry --check
 
       - name: Linting (Optional)
         run: |
